--- a/res/values-et/strings.xml
+++ b/res/values-et/strings.xml
@@ -216,13 +216,19 @@
     <string name="skip_label" msgid="6380034601349015895">"Jäta vahele"</string>
     <string name="next_label" msgid="1248293387735652187">"Järgmine"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"Keeled"</string>
+    <!-- no translation found for language_picker_category_title (1792199453060454565) -->
+    <skip />
+    <!-- no translation found for desc_current_default_language (1901157141663662859) -->
+    <skip />
     <string name="locale_remove_menu" msgid="3521546263421387474">"Eemalda"</string>
     <string name="add_a_language" msgid="2126220398077503271">"Lisa keel"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"Keel"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"Eelistatud keel"</string>
-    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Rakenduste keeled"</string>
+    <!-- no translation found for app_locales_picker_menu_title (7617427959223831373) -->
+    <skip />
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Iga rakenduse keele määramine"</string>
-    <string name="app_locale_picker_title" msgid="8423365003726200684">"Rakenduse keel"</string>
+    <!-- no translation found for app_locale_picker_title (2431448962911301366) -->
+    <skip />
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Soovitatud keeled"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Kõik keeled"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Süsteemi keel"</string>
@@ -230,6 +236,12 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Selle rakenduse jaoks pole seadetes keele valimine saadaval."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"Keel võib rakenduses saadaolevatest keeltest erineda. Mõni rakendus ei pruugi seda seadet toetada."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"Siin on kuvatud ainult rakendused, mis toetavad keele valimist."</string>
+    <!-- no translation found for desc_introduction_of_language_picker (1038423471887102449) -->
+    <skip />
+    <!-- no translation found for desc_notice_of_language_picker (3449290526457925447) -->
+    <skip />
+    <!-- no translation found for desc_locale_helper_footer_general (6967183342596405116) -->
+    <skip />
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="other">Kas eemaldada valitud keeled?</item>
       <item quantity="one">Kas eemaldada valitud keel?</item>
@@ -237,7 +249,8 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"Tekst kuvatakse teises keeles."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"Kõiki keeli ei saa eemaldada"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"Jätke alles vähemalt üks eelistatud keel"</string>
-    <string name="locale_not_translated" msgid="5079729745235316146">"Ei pruugi mõnes rakenduses saadaval olla"</string>
+    <!-- no translation found for locale_not_translated (3071618135527110152) -->
+    <skip />
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"Teisalda üles"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"Teisalda alla"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"Teisalda kõige üles"</string>
@@ -538,9 +551,9 @@
     <!-- no translation found for security_settings_udfps_enroll_progress_a11y_message (6183535114682369699) -->
     <skip />
     <string name="security_settings_fingerprint_enroll_finish_title" msgid="3606325177406951457">"Sõrmejälg on lisatud"</string>
-    <string name="security_settings_fingerprint_enroll_finish_v2_message" product="tablet" msgid="5918110416185820480">"Mida rohkem te sõrmejäljega avamist kasutate, seda paremini see teie tahvelarvutit avab või rakendustes teie isikut kinnitab"</string>
-    <string name="security_settings_fingerprint_enroll_finish_v2_message" product="device" msgid="2989276789236025675">"Mida rohkem te sõrmejäljega avamist kasutate, seda paremini see teie seadet avab või rakendustes teie isikut kinnitab"</string>
-    <string name="security_settings_fingerprint_enroll_finish_v2_message" product="default" msgid="6506437402392739879">"Mida rohkem te sõrmejäljega avamist kasutate, seda paremini see teie telefoni avab või rakendustes teie isikut kinnitab"</string>
+    <string name="security_settings_fingerprint_enroll_finish_v2_message" product="tablet" msgid="4372740782513990687">"Nüüd saate tahvelarvuti avamiseks või oma isiku kinnitamiseks (nt rakendustesse sisselogimisel) oma sõrmejälge kasutada."</string>
+    <string name="security_settings_fingerprint_enroll_finish_v2_message" product="device" msgid="6208711210125838327">"Nüüd saate seadme avamiseks või oma isiku kinnitamiseks (nt rakendustesse sisselogimisel) oma sõrmejälge kasutada."</string>
+    <string name="security_settings_fingerprint_enroll_finish_v2_message" product="default" msgid="4755651286485895622">"Nüüd saate telefoni avamiseks või oma isiku kinnitamiseks (nt rakendustesse sisselogimisel) oma sõrmejälge kasutada."</string>
     <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"Teen seda hiljem"</string>
     <string name="security_settings_udfps_tip_fingerprint_help" msgid="7580784640741217494">"Tõstke, seejärel puudutage uuesti"</string>
     <string name="security_settings_udfps_side_fingerprint_help" msgid="2567232481013195191">"Asetage oma sõrmejälje külg andurile ja hoidke all, seejärel asetage andurile sõrmejälje teine külg"</string>
@@ -1616,14 +1629,14 @@
     <string name="sd_ejecting_summary" msgid="861928572729341132">"Eemaldamine pooleli"</string>
     <string name="storage_low_title" msgid="8002650511493419567">"Talletusruum saab täis"</string>
     <string name="storage_low_summary" msgid="7341022293583384506">"Mõned süsteemifunktsioonid, nt sünkroonimine, ei pruugi õigesti toimida. Proovige vabastada ruumi, kustutades üksusi, nt rakendusi või meediasisu, või eemaldades neid."</string>
-    <string name="storage_menu_rename" msgid="8549835371429159336">"Ümbernimetamine"</string>
+    <string name="storage_menu_rename" msgid="8549835371429159336">"Nimeta ümber"</string>
     <string name="storage_menu_mount" msgid="4760531872302820569">"Ühendamine"</string>
-    <string name="storage_menu_unmount" msgid="8171552487742912282">"Eemaldamine"</string>
+    <string name="storage_menu_unmount" msgid="8171552487742912282">"Eemalda"</string>
     <string name="storage_menu_format" msgid="8903698999905354146">"SD-kaardi teisald. salvestusruumiks vormindamine"</string>
     <string name="storage_menu_format_button" msgid="7623565190643699626">"Vorminda kaart"</string>
     <string name="storage_menu_format_public" msgid="5567214442727034630">"Vormindamine kaasaskantavana"</string>
     <string name="storage_menu_format_option" msgid="4886059624052908432">"Vorminda"</string>
-    <string name="storage_menu_migrate" msgid="2196088149560070193">"Andmete üleviimine"</string>
+    <string name="storage_menu_migrate" msgid="2196088149560070193">"Vii andmed üle"</string>
     <string name="storage_menu_forget" msgid="5154017890033638936">"Unustamine"</string>
     <string name="storage_menu_set_up" msgid="4401074025612064744">"Seadistus"</string>
     <string name="storage_menu_free" msgid="616100170298501673">"Ruumi vabastamine"</string>
@@ -1660,7 +1673,7 @@
     <string name="storage_detail_dialog_system" msgid="7461009051858709479">"Jaotis Süsteem hõlmab Androidi versiooni <xliff:g id="VERSION">%s</xliff:g> käitamiseks vajalikke faile"</string>
     <string name="storage_wizard_guest" msgid="5813419895687733649">"Külalisrež. kasutajad ei saa SD-kaarte vormindada"</string>
     <string name="storage_wizard_init_title" msgid="9036374223934708619">"Seadista üksus <xliff:g id="NAME">^1</xliff:g>"</string>
-    <string name="storage_wizard_init_external_title" msgid="5304499882951772292">"Vorminda SD-kaart teisaldatavaks salvestusruumiks"</string>
+    <string name="storage_wizard_init_external_title" msgid="5304499882951772292">"SD-kaardi teisald. salvestusruumiks vormindamine"</string>
     <string name="storage_wizard_init_external_summary" msgid="5842588772292324473">"Salvestage fotosid, videoid, muusikat ja muud ning pääsege nendele muudes seadmetes juurde"</string>
     <string name="storage_wizard_init_internal_title" msgid="8799676990387869411">"Vorminda SD-kaart sisemiseks salvestusruumiks"</string>
     <string name="storage_wizard_init_internal_summary" msgid="8224648610422581704">"Salvestage rakendusi ja meediat vaid selles telefonis kasutamiseks"</string>
@@ -1703,7 +1716,7 @@
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Vorminda"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Seadista hiljem"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Kas vormindada seade <xliff:g id="NAME">^1</xliff:g>?"</string>
-    <string name="storage_wizard_format_confirm_v2_body" msgid="635958708974709506">"Seade <xliff:g id="NAME_0">^1</xliff:g> tuleb vormindada, et rakendusi, faile ja meediat salvestada. \n\nVormindamisel kustutatakse kogu seadmes <xliff:g id="NAME_1">^2</xliff:g> olev sisu. Sisu kaotsimineku vältimiseks varundage see teise salvestusseadmesse <xliff:g id="NAME_2">^3</xliff:g> või mõnda muusse seadmesse."</string>
+    <string name="storage_wizard_format_confirm_v2_body" msgid="635958708974709506">"<xliff:g id="NAME_0">^1</xliff:g> tuleb vormindada, et rakendusi, faile ja meediat salvestada. \n\nVormindamisel kustutatakse kogu meediumil <xliff:g id="NAME_1">^2</xliff:g> olev sisu. Sisu kaotsimineku vältimiseks varundage see teise meediumisse (nt <xliff:g id="NAME_2">^3</xliff:g>) või mõnda muusse seadmesse."</string>
     <string name="storage_wizard_format_confirm_v2_body_external" msgid="5810296966099830035">"<xliff:g id="NAME_0">^1</xliff:g> tuleb fotode, videote, muusika ja muu salvestamiseks vormindada. \n\nVormindamisega kustutatakse meediumil <xliff:g id="NAME_1">^2</xliff:g> olemasolev sisu. Sisu kaotsimineku vältimiseks varundage see teisele meediumile (näiteks <xliff:g id="NAME_2">^3</xliff:g>) või mõnda muusse seadmesse."</string>
     <string name="storage_wizard_format_confirm_v2_action" msgid="5718254101386377126">"Vorminda seade <xliff:g id="NAME">^1</xliff:g>"</string>
     <string name="storage_wizard_migrate_v2_title" msgid="3471564531564756698">"Kas teisaldada sisu seadmesse <xliff:g id="NAME">^1</xliff:g>?"</string>
@@ -2766,10 +2779,8 @@
     <string name="battery_tip_early_heads_up_done_summary" msgid="7858923105760361208">"Mõned funktsioonid võivad olla piiratud"</string>
     <string name="battery_tip_high_usage_title" msgid="9110720762506146697">"Suur akukasutus"</string>
     <string name="battery_tip_high_usage_summary" msgid="3938999581403084551">"Vaadake suurima akukasutusega rakendusi"</string>
-    <!-- no translation found for battery_tip_limited_temporarily_title (5962767837251276527) -->
-    <skip />
-    <!-- no translation found for battery_tip_limited_temporarily_summary (4236185146380247801) -->
-    <skip />
+    <string name="battery_tip_limited_temporarily_title" msgid="5962767837251276527">"Laadimine on peatatud"</string>
+    <string name="battery_tip_limited_temporarily_summary" msgid="4236185146380247801">"Akut kaitstakse, et aku tööiga pikendada\nPuudutage lisateabe saamiseks"</string>
     <!-- no translation found for battery_tip_limited_temporarily_extra_summary (8876637325622106400) -->
     <skip />
     <string name="battery_tip_limited_temporarily_dialog_resume_charge" msgid="2302295458913832342">"Jätka laadimist"</string>
@@ -2807,8 +2818,7 @@
     <string name="battery_tip_unrestrict_app_dialog_message" msgid="215449637818582819">"See rakendus saab taustal akut kasutada. Aku võib oodatust varem tühjaks saada."</string>
     <string name="battery_tip_unrestrict_app_dialog_ok" msgid="7940183167721998470">"Eemalda"</string>
     <string name="battery_tip_unrestrict_app_dialog_cancel" msgid="4968135709160207507">"Tühista"</string>
-    <!-- no translation found for battery_tip_charge_to_full_button (6701709034348116261) -->
-    <skip />
+    <string name="battery_tip_charge_to_full_button" msgid="6701709034348116261">"Laadi täissaamiseni"</string>
     <string name="battery_tip_dialog_summary_message" product="default" msgid="6097167058237891756">"Teie rakendused kasutavad akut tavapärases ulatuses. Kui rakendused kasutavad liiga palju akut, soovitab telefon teile selle vastu sobilikke meetmeid.\n\nKui aku hakkab tühjaks saama, võite alati akusäästja sisse lülitada."</string>
     <string name="battery_tip_dialog_summary_message" product="tablet" msgid="573297655597451123">"Teie rakendused kasutavad akut tavapärases ulatuses. Kui rakendused kasutavad liiga palju akut, soovitab tahvelarvuti teile selle vastu sobilikke meetmeid.\n\nKui aku hakkab tühjaks saama, võite alati akusäästja sisse lülitada."</string>
     <string name="battery_tip_dialog_summary_message" product="device" msgid="8222461068860745749">"Teie rakendused kasutavad akut tavapärases ulatuses. Kui rakendused kasutavad liiga palju akut, soovitab seade teile selle vastu sobilikke meetmeid.\n\nKui aku hakkab tühjaks saama, võite alati akusäästja sisse lülitada."</string>
@@ -2998,13 +3008,19 @@
     <string name="battery_usage_background_less_than_one_minute" msgid="3957971442554437909">"Taustal: vähem kui minut"</string>
     <string name="battery_usage_for_total_time" msgid="8402254046930910905">"Kokku: <xliff:g id="TIME">%s</xliff:g>"</string>
     <string name="battery_usage_for_background_time" msgid="9109637210617095188">"Taustal: <xliff:g id="TIME">%s</xliff:g>"</string>
-    <string name="battery_usage_screen_footer" msgid="7899907241146636817">"Akukasutuse andmed on ligikaudsed ja kasutamist ei mõõdeta telefoni laadimise ajal"</string>
-    <string name="battery_usage_screen_footer_empty" msgid="115806339713068930">"Aku kasutuse andmed on näha siis, kui olete telefoni mõni tund kasutanud"</string>
+    <string name="battery_usage_screen_footer" product="default" msgid="7899907241146636817">"Akukasutuse andmed on ligikaudsed ja kasutamist ei mõõdeta telefoni laadimise ajal"</string>
+    <!-- no translation found for battery_usage_screen_footer (3729564192877964259) -->
+    <skip />
+    <!-- no translation found for battery_usage_screen_footer (6610974734578869768) -->
+    <skip />
+    <string name="battery_usage_screen_footer_empty" product="default" msgid="115806339713068930">"Aku kasutuse andmed on näha siis, kui olete telefoni mõni tund kasutanud"</string>
+    <!-- no translation found for battery_usage_screen_footer_empty (846951714694270507) -->
+    <skip />
+    <!-- no translation found for battery_usage_screen_footer_empty (6290839602700243003) -->
+    <skip />
     <string name="battery_usage_chart" msgid="4114747521432440017">"Akukasutuse diagramm"</string>
-    <!-- no translation found for daily_battery_usage_chart (4176059567682992686) -->
-    <skip />
-    <!-- no translation found for hourly_battery_usage_chart (3098314511076561272) -->
-    <skip />
+    <string name="daily_battery_usage_chart" msgid="4176059567682992686">"Aku päevapõhise kasutuse diagramm"</string>
+    <string name="hourly_battery_usage_chart" msgid="3098314511076561272">"Aku tunnipõhise kasutuse diagramm"</string>
     <string name="process_stats_summary_title" msgid="502683176231281732">"Protsessi statistika"</string>
     <string name="process_stats_summary" msgid="522842188571764699">"Tehnilised üksikasjad protsesside käitamise kohta"</string>
     <string name="app_memory_use" msgid="7559666138324410666">"Mälu kasutamine"</string>
@@ -5622,10 +5638,8 @@
     <string name="media_controls_title" msgid="403271085636252597">"Meedia"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"Meediapleieri kinnitamine"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"Kiirelt taasesituse jätkamiseks jääb meediapleier kiirseadetes avatuks"</string>
-    <!-- no translation found for media_controls_lockscreen_title (2188311721857512510) -->
-    <skip />
-    <!-- no translation found for media_controls_lockscreen_description (3320333660404439510) -->
-    <skip />
+    <string name="media_controls_lockscreen_title" msgid="2188311721857512510">"Kuva meedia lukustuskuval"</string>
+    <string name="media_controls_lockscreen_description" msgid="3320333660404439510">"Kiirelt taasesituse jätkamiseks jääb meediapleier lukustuskuval avatuks"</string>
     <string name="media_controls_recommendations_title" msgid="184225835236807677">"Kuva meediasoovitusi"</string>
     <string name="media_controls_recommendations_description" msgid="7596498733126824030">"Teie tegevuse põhjal"</string>
     <string name="media_controls_hide_player" msgid="2751439192580884015">"Peida pleier"</string>
