--- a/res/values-ky/strings.xml
+++ b/res/values-ky/strings.xml
@@ -216,13 +216,15 @@
     <string name="skip_label" msgid="6380034601349015895">"Өткөрүп жиберүү"</string>
     <string name="next_label" msgid="1248293387735652187">"Кийинки"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"Тилдер"</string>
+    <string name="language_picker_category_title" msgid="1792199453060454565">"Тандалган тилдердин ирети"</string>
+    <string name="desc_current_default_language" msgid="1901157141663662859">"Системанын тили"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"Өчүрүү"</string>
     <string name="add_a_language" msgid="2126220398077503271">"Тил кошуу"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"Тил"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"Тандалган тил"</string>
-    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Колдонмонун тилдери"</string>
+    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"Колдонмонун тилдери"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Ар бир колдонмо үчүн тил тандаңыз"</string>
-    <string name="app_locale_picker_title" msgid="8423365003726200684">"Колдонмонун тили"</string>
+    <string name="app_locale_picker_title" msgid="2431448962911301366">"Колдонмонун тили"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Сунушталган тилдер"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Бардык тилдер"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Системанын тили"</string>
@@ -230,6 +232,9 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Бул колдонмонун тилин Жөндөөлөрдөн тандоого болбойт."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"Тил колдонмодо жеткиликтүү тилдерден айырмаланышы мүмкүн. Бул жөндөө айрым колдонмолор тарабынан колдоого алынбайт болушу мүмкүн."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"Бул жерде тил тандоого мүмкүн болгон колдонмолорду гана көрөсүз."</string>
+    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"Система, колдонмолор жана вебсайттар тандалган тилдерден колдоого алынган биринчи тилди колдонот."</string>
+    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"Ар бир колдонмонун тилин тандоо үчүн колдонмодогу тилдердин параметрлерине өтүңүз."</string>
+    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"Тилдер жөнүндө кененирээк маалымат"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="other">Тандалган тилдерди өчүрөсүзбү?</item>
       <item quantity="one">Тандалган тилди өчүрөсүзбү?</item>
@@ -237,7 +242,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"Текст башка тилде көрүнөт."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"Тилдердин баары алынбайт"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"Тандалган тилдерден кеминде бирөөсүн калтырыңыз"</string>
-    <string name="locale_not_translated" msgid="5079729745235316146">"Айрым колдонмолордо жеткиликсиз болушу мүмкүн"</string>
+    <string name="locale_not_translated" msgid="3071618135527110152">"Системанын тили катары жеткиликсиз"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"Жогору жылдыруу"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"Төмөн жылдыруу"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"Башына жылдыруу"</string>
@@ -536,9 +541,9 @@
     <string name="security_settings_udfps_enroll_repeat_a11y_message" msgid="2785464357615568197">"Ошондо манжаңыздын изи тагыраак түшөт."</string>
     <string name="security_settings_udfps_enroll_progress_a11y_message" msgid="6183535114682369699">"Манжа изи катталууда: <xliff:g id="PERCENTAGE">%d</xliff:g> пайыз"</string>
     <string name="security_settings_fingerprint_enroll_finish_title" msgid="3606325177406951457">"Манжа изи кошулду"</string>
-    <string name="security_settings_fingerprint_enroll_finish_v2_message" product="tablet" msgid="5918110416185820480">"Манжаңыздын изи менен планшетиңиздин кулпусун канчалык көп ачып, колдонмолордо өзүңүздү канчалык көп ырастасаңыз, Манжа изи менен ачуу функциясы ошончолук жакшы иштейт"</string>
-    <string name="security_settings_fingerprint_enroll_finish_v2_message" product="device" msgid="2989276789236025675">"Манжаңыздын изи менен түзмөгүңүздүн кулпусун канчалык көп ачып, колдонмолордо өзүңүздү канчалык көп ырастасаңыз, Манжа изи менен ачуу функциясы ошончолук жакшы иштейт"</string>
-    <string name="security_settings_fingerprint_enroll_finish_v2_message" product="default" msgid="6506437402392739879">"Манжаңыздын изи менен телефонуңуздун кулпусун канчалык көп ачып, колдонмолордо өзүңүздү канчалык көп ырастасаңыз, Манжа изи менен ачуу функциясы ошончолук жакшы иштейт"</string>
+    <string name="security_settings_fingerprint_enroll_finish_v2_message" product="tablet" msgid="4372740782513990687">"Эми манжаңыздын изи менен планшетиңиздин кулпусун ачып же колдонмолорго кирүүдө өзүңүздү ырастайсыз"</string>
+    <string name="security_settings_fingerprint_enroll_finish_v2_message" product="device" msgid="6208711210125838327">"Эми манжаңыздын изи менен түзмөгүңүздүн кулпусун ачып же колдонмолорго кирүүдө өзүңүздү ырастайсыз"</string>
+    <string name="security_settings_fingerprint_enroll_finish_v2_message" product="default" msgid="4755651286485895622">"Эми манжаңыздын изи менен телефонуңуздун кулпусун ачып же колдонмолорго кирүүдө өзүңүздү ырастайсыз"</string>
     <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"Азыр эмес"</string>
     <string name="security_settings_udfps_tip_fingerprint_help" msgid="7580784640741217494">"Көтөрүп, кайра тийип коюңуз"</string>
     <string name="security_settings_udfps_side_fingerprint_help" msgid="2567232481013195191">"Манжаңызды сенсорго капталдатып коюп, кармап туруңуз, андан кийин башка капталдарын коюңуз"</string>
@@ -2322,8 +2327,8 @@
     <string name="talkback_summary" msgid="5820927220378864281">"Экрандагы нерсени окуп берүүчү курал көздөрү начар көргөн адамдарга арналган"</string>
     <string name="select_to_speak_summary" msgid="1995285446766920925">"Экрандагы нерсени угуу үчүн аны басып коесуз"</string>
     <string name="accessibility_captioning_title" msgid="4561871958958925225">"Коштомо жазуулардын жөндөөлөрү"</string>
-    <string name="accessibility_captioning_about_title" msgid="3542171637334191563">"Коштомо жазуулардын жеке жөндөөлөрү тууралуу"</string>
-    <string name="accessibility_captioning_footer_learn_more_content_description" msgid="5730040700677017706">"Коштомо жазуулардын жеке жөндөөлөрү тууралуу кеңири маалымат"</string>
+    <string name="accessibility_captioning_about_title" msgid="3542171637334191563">"Коштомо жазуулардын параметрлери тууралуу"</string>
+    <string name="accessibility_captioning_footer_learn_more_content_description" msgid="5730040700677017706">"Коштомо жазуулардын параметрлери тууралуу кеңири маалымат"</string>
     <string name="accessibility_screen_magnification_title" msgid="1211169976144629087">"Чоңойтуу"</string>
     <string name="accessibility_screen_magnification_shortcut_title" msgid="2387963646377987780">"Чоңойтуу ыкчам баскычы"</string>
     <string name="accessibility_screen_magnification_follow_typing_title" msgid="6379517513916651560">"Терген текстти чоңойтуу"</string>
@@ -2473,7 +2478,7 @@
     <string name="accessibility_autoclick_short_summary" msgid="4106953930081213514">"0,2 секунд"</string>
     <string name="accessibility_autoclick_medium_title" msgid="3134175117576834320">"Орто"</string>
     <string name="accessibility_autoclick_medium_summary" msgid="1343390686514222871">"0,6 секунд"</string>
-    <string name="accessibility_autoclick_long_title" msgid="6799311820641687735">"Узун"</string>
+    <string name="accessibility_autoclick_long_title" msgid="6799311820641687735">"Узак"</string>
     <string name="accessibility_autoclick_long_summary" msgid="3747153151313563637">"1 секунд"</string>
     <string name="accessibility_autoclick_custom_title" msgid="4597792235546232038">"Ыңгайлаштырылган"</string>
     <string name="accessibility_autoclick_shorter_desc" msgid="7631013255724544348">"Кыскараак"</string>
@@ -2581,8 +2586,8 @@
       <item quantity="one">Орто (<xliff:g id="CLICK_DELAY_LABEL_0">%1$s</xliff:g> секунд)</item>
     </plurals>
     <plurals name="accessibilty_autoclick_preference_subtitle_long_delay" formatted="false" msgid="2230755548820485984">
-      <item quantity="other">Узун (<xliff:g id="CLICK_DELAY_LABEL_1">%1$s</xliff:g> секунд)</item>
-      <item quantity="one">Узун (<xliff:g id="CLICK_DELAY_LABEL_0">%1$s</xliff:g> секунд)</item>
+      <item quantity="other">Узак (<xliff:g id="CLICK_DELAY_LABEL_1">%1$s</xliff:g> секунд)</item>
+      <item quantity="one">Узак (<xliff:g id="CLICK_DELAY_LABEL_0">%1$s</xliff:g> секунд)</item>
     </plurals>
     <plurals name="accessibilty_autoclick_delay_unit_second" formatted="false" msgid="4537791441118261556">
       <item quantity="other"><xliff:g id="CLICK_DELAY_LABEL_2">%1$s</xliff:g> секунд</item>
@@ -2993,8 +2998,16 @@
     <string name="battery_usage_background_less_than_one_minute" msgid="3957971442554437909">"Фондо колдонулушу: бир мүнөткө жетпейт"</string>
     <string name="battery_usage_for_total_time" msgid="8402254046930910905">"Жалпысынан: <xliff:g id="TIME">%s</xliff:g>"</string>
     <string name="battery_usage_for_background_time" msgid="9109637210617095188">"Фондо колдонулушу: <xliff:g id="TIME">%s</xliff:g>"</string>
-    <string name="battery_usage_screen_footer" msgid="7899907241146636817">"Батареянын колдонулушу тууралуу маалымат болжол менен көрүнүп, телефон кубатталып жатканда өлчөнбөйт"</string>
-    <string name="battery_usage_screen_footer_empty" msgid="115806339713068930">"Телефонуңузду бир нече саат колдонгондон кийин батареянын керектелиши тууралуу маалымат жеткиликтүү болот"</string>
+    <string name="battery_usage_screen_footer" product="default" msgid="7899907241146636817">"Батареянын колдонулушу тууралуу маалымат болжол менен көрүнүп, телефон кубатталып жатканда өлчөнбөйт"</string>
+    <!-- no translation found for battery_usage_screen_footer (3729564192877964259) -->
+    <skip />
+    <!-- no translation found for battery_usage_screen_footer (6610974734578869768) -->
+    <skip />
+    <string name="battery_usage_screen_footer_empty" product="default" msgid="115806339713068930">"Телефонуңузду бир нече саат колдонгондон кийин батареянын керектелиши тууралуу маалымат жеткиликтүү болот"</string>
+    <!-- no translation found for battery_usage_screen_footer_empty (846951714694270507) -->
+    <skip />
+    <!-- no translation found for battery_usage_screen_footer_empty (6290839602700243003) -->
+    <skip />
     <string name="battery_usage_chart" msgid="4114747521432440017">"Батареянын колдонулушунун диаграммасы"</string>
     <string name="daily_battery_usage_chart" msgid="4176059567682992686">"Батареяны күнүмдүк колдонуу диаграммасы"</string>
     <string name="hourly_battery_usage_chart" msgid="3098314511076561272">"Батареяны сааттык колдонуу диаграммасы"</string>
@@ -5583,7 +5596,7 @@
     <string name="power_menu_long_press_for_assist_sensitivity_title" msgid="1626808509158422185">"Коё бербей басып туруунун узактыгы"</string>
     <string name="power_menu_long_press_for_assist_sensitivity_summary" msgid="7550610071666801935">"Сезгичтигин тууралоо үчүн кубат баскычын канчага чейин коё бербей басып туруу керектигин тандаңыз"</string>
     <string name="power_menu_long_press_for_assist_sensitivity_low_label" msgid="3430099983480845635">"Кыска"</string>
-    <string name="power_menu_long_press_for_assist_sensitivity_high_label" msgid="2059686170350829156">"Узун"</string>
+    <string name="power_menu_long_press_for_assist_sensitivity_high_label" msgid="2059686170350829156">"Узак"</string>
     <string name="lockscreen_privacy_wallet_setting_toggle" msgid="4188327143734192000">"Капчыкты көрсөтүү"</string>
     <string name="lockscreen_privacy_wallet_summary" msgid="3984851951621168573">"Капчыкка кулпуланган экрандан өтүүгө уруксат берүү"</string>
     <string name="lockscreen_privacy_qr_code_scanner_setting_toggle" msgid="4284186474146767523">"QR код сканерин көрсөтүү"</string>
@@ -5615,10 +5628,8 @@
     <string name="media_controls_title" msgid="403271085636252597">"Медиа"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"Медиа ойноткучту кадап коюу"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"Угуп жаткан нерсени оңой улантып кетүү үчүн медиа ойноткуч Ыкчам жөндөөлөрдө ачылып турат"</string>
-    <!-- no translation found for media_controls_lockscreen_title (2188311721857512510) -->
-    <skip />
-    <!-- no translation found for media_controls_lockscreen_description (3320333660404439510) -->
-    <skip />
+    <string name="media_controls_lockscreen_title" msgid="2188311721857512510">"Медианы кулпуланган экранда көрсөтүү"</string>
+    <string name="media_controls_lockscreen_description" msgid="3320333660404439510">"Угуп жаткан нерсени оңой улантып кетүү үчүн медиа ойноткуч кулпуланган экранда ачылып турат"</string>
     <string name="media_controls_recommendations_title" msgid="184225835236807677">"Медиа сунуштарын көрсөтүү"</string>
     <string name="media_controls_recommendations_description" msgid="7596498733126824030">"Аракеттериңиздин негизинде"</string>
     <string name="media_controls_hide_player" msgid="2751439192580884015">"Ойноткучту жашыруу"</string>
