--- a/res/values-zu/strings.xml
+++ b/res/values-zu/strings.xml
@@ -216,13 +216,15 @@
     <string name="skip_label" msgid="6380034601349015895">"Yeqa"</string>
     <string name="next_label" msgid="1248293387735652187">"Okulandelayo"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"Izilimi"</string>
+    <string name="language_picker_category_title" msgid="1792199453060454565">"Ukuhleleka kolimi oluncanyelwayo"</string>
+    <string name="desc_current_default_language" msgid="1901157141663662859">"Ulimi lwesistimu"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"Susa"</string>
     <string name="add_a_language" msgid="2126220398077503271">"Engeza ulimi"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"Ulimi"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"Ulimi oluncanyelwayo"</string>
-    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Izilimi ze-App"</string>
+    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"Izilimi ze-app"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Setha ulimi le-app ngayinye"</string>
-    <string name="app_locale_picker_title" msgid="8423365003726200684">"Ulimi le-app"</string>
+    <string name="app_locale_picker_title" msgid="2431448962911301366">"Ulimi lwe-app"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Izilimi eziphakanyisiwe"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Zonke izilimi"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Ulimi lwesistimu"</string>
@@ -230,6 +232,9 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Ukukhetha ulimi kwale app akutholakali Kumasethingi."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"Ulimi lungahluka ezilimini ezitholakala ku-app. Amanye ama-app angase angalisekeli leli sethingi."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"Ama-app asekela ukukhethwa kolimi kuphela aboniswa lapha."</string>
+    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"Amasistimu wakho, ama-app, namawebhusayithi kusebenzisa ulimi olusekelwayo lokuqala kusuka ezilimini zakho ezincanyelwayo."</string>
+    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"Ukuze ukhethe ulimi lwe-app ngayinye, iya kumasethingi wolimi lwe-app."</string>
+    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"Funda kabanzi ngezilimi"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="one">Susa izilimi ezikhethiwe?</item>
       <item quantity="other">Susa izilimi ezikhethiwe?</item>
@@ -237,7 +242,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"Umbhalo uzoboniswa ngolunye ulimi."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"Ayikwazi ukususa zonke izilimi"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"Gcina okungenani ulimi olulodwa oluncanyelwayo"</string>
-    <string name="locale_not_translated" msgid="5079729745235316146">"Kungenzeka ingatholakali kwezinye izinhlelo zokusebenza"</string>
+    <string name="locale_not_translated" msgid="3071618135527110152">"Akutholakali njengolimi lwesistimu"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"Iya phezulu"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"Iya phansi"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"Thumela Phezulu"</string>
@@ -536,9 +541,9 @@
     <string name="security_settings_udfps_enroll_repeat_a11y_message" msgid="2785464357615568197">"Lokhu kusiza ukuthatha iningi lwesigxivizo sakho somunwe"</string>
     <string name="security_settings_udfps_enroll_progress_a11y_message" msgid="6183535114682369699">"Iphesenti elingu-<xliff:g id="PERCENTAGE">%d</xliff:g> lokubhalisela izigxivizo zeminwe"</string>
     <string name="security_settings_fingerprint_enroll_finish_title" msgid="3606325177406951457">"Izigxivizo zeminwe zingeziwe"</string>
-    <string name="security_settings_fingerprint_enroll_finish_v2_message" product="tablet" msgid="5918110416185820480">"Ukuvula ngesigxivizo somunwe kuyathuthuka lapho ukusebenzisa kakhulu ukuze uvule ithebulethi yakho noma uqinisekise ukuthi uwena kuma-app"</string>
-    <string name="security_settings_fingerprint_enroll_finish_v2_message" product="device" msgid="2989276789236025675">"Ukuvula ngesigxivizo somunwe kuyathuthuka lapho ukusebenzisa kakhulu ukuze uvule idivayisi yakho noma uqinisekise ukuthi uwena kuma-app"</string>
-    <string name="security_settings_fingerprint_enroll_finish_v2_message" product="default" msgid="6506437402392739879">"Ukuvula ngesigxivizo somunwe kuyathuthuka lapho ukusebenzisa kakhulu ukuze uvule ifoni yakho noma uqinisekise ukuthi uwena kuma-app"</string>
+    <string name="security_settings_fingerprint_enroll_finish_v2_message" product="tablet" msgid="4372740782513990687">"Manje usungasebenzisa isigxivizo sakho somunwe ukuvula ithebulethi yakho noma ukuqinisekisa ukuthi nguwe, njengalapho ungena ngemvume kuma-app"</string>
+    <string name="security_settings_fingerprint_enroll_finish_v2_message" product="device" msgid="6208711210125838327">"Manje usungasebenzisa isigxivizo sakho somunwe ukuvula idivayisi yakho noma ukuqinisekisa ukuthi nguwe, njengalapho ungena ngemvume kuma-app"</string>
+    <string name="security_settings_fingerprint_enroll_finish_v2_message" product="default" msgid="4755651286485895622">"Manje usungasebenzisa isigxivizo sakho somunwe ukuvula ifoni yakho noma ukuqinisekisa ukuthi nguwe, njengalapho ungena ngemvume kuma-app"</string>
     <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"Yenza kamuva"</string>
     <string name="security_settings_udfps_tip_fingerprint_help" msgid="7580784640741217494">"Phakamisa, bese uthinte futhi"</string>
     <string name="security_settings_udfps_side_fingerprint_help" msgid="2567232481013195191">"Beka uhlangothi lwesigxivizo sakho somunwe kunzwa uphinde ubambe, bese ushintshela kolunye uhlangothi"</string>
@@ -2994,8 +2999,16 @@
     <string name="battery_usage_background_less_than_one_minute" msgid="3957971442554437909">"Ingemuva: ngaphansi komzuzu"</string>
     <string name="battery_usage_for_total_time" msgid="8402254046930910905">"Inani: <xliff:g id="TIME">%s</xliff:g>"</string>
     <string name="battery_usage_for_background_time" msgid="9109637210617095188">"Ingemuva: <xliff:g id="TIME">%s</xliff:g>"</string>
-    <string name="battery_usage_screen_footer" msgid="7899907241146636817">"Idatha yokusetshenziswa kwebhethri iyalinganiselwa futhi ayilingani nokusetshenziswa kwefoni lapho ishaja"</string>
-    <string name="battery_usage_screen_footer_empty" msgid="115806339713068930">"Ukusetshenziswa kwebhethri kuzotholakala ngemva kokusebenzisa ifoni yakho amahora ambalwa"</string>
+    <string name="battery_usage_screen_footer" product="default" msgid="7899907241146636817">"Idatha yokusetshenziswa kwebhethri iyalinganiselwa futhi ayilingani nokusetshenziswa kwefoni lapho ishaja"</string>
+    <!-- no translation found for battery_usage_screen_footer (3729564192877964259) -->
+    <skip />
+    <!-- no translation found for battery_usage_screen_footer (6610974734578869768) -->
+    <skip />
+    <string name="battery_usage_screen_footer_empty" product="default" msgid="115806339713068930">"Ukusetshenziswa kwebhethri kuzotholakala ngemva kokusebenzisa ifoni yakho amahora ambalwa"</string>
+    <!-- no translation found for battery_usage_screen_footer_empty (846951714694270507) -->
+    <skip />
+    <!-- no translation found for battery_usage_screen_footer_empty (6290839602700243003) -->
+    <skip />
     <string name="battery_usage_chart" msgid="4114747521432440017">"Ishadi lokusetshenziswa kwebhethri"</string>
     <string name="daily_battery_usage_chart" msgid="4176059567682992686">"Ishadi lokusetshenziswa kwebhethri kwansuku zonke"</string>
     <string name="hourly_battery_usage_chart" msgid="3098314511076561272">"Ishadi lokusetshenziswa kwebhethri ngehora"</string>
@@ -5616,10 +5629,8 @@
     <string name="media_controls_title" msgid="403271085636252597">"Imidiya"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"Phina i-media player"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"Ukuze uqalise kabusha ngokushesha ukudlala, i-media player ihlala ivuliwe Kumasethingi asheshayo"</string>
-    <!-- no translation found for media_controls_lockscreen_title (2188311721857512510) -->
-    <skip />
-    <!-- no translation found for media_controls_lockscreen_description (3320333660404439510) -->
-    <skip />
+    <string name="media_controls_lockscreen_title" msgid="2188311721857512510">"Bonisa imidiya ekukhiyeni isikrini"</string>
+    <string name="media_controls_lockscreen_description" msgid="3320333660404439510">"Ukuze uqalise kabusha ukudlala ngokushesha, i-media player ihlala ivuliwe ekukhiyeni isikrini"</string>
     <string name="media_controls_recommendations_title" msgid="184225835236807677">"Bonisa izincomo zemidiya"</string>
     <string name="media_controls_recommendations_description" msgid="7596498733126824030">"Ngokususelwe kumsebenzi wakho"</string>
     <string name="media_controls_hide_player" msgid="2751439192580884015">"Fihla umdlali"</string>
