--- a/res/values-hy/strings.xml
+++ b/res/values-hy/strings.xml
@@ -216,13 +216,19 @@
     <string name="skip_label" msgid="6380034601349015895">"Բաց թողնել"</string>
     <string name="next_label" msgid="1248293387735652187">"Հաջորդը"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"Լեզուներ"</string>
+    <!-- no translation found for language_picker_category_title (1792199453060454565) -->
+    <skip />
+    <!-- no translation found for desc_current_default_language (1901157141663662859) -->
+    <skip />
     <string name="locale_remove_menu" msgid="3521546263421387474">"Հեռացնել"</string>
     <string name="add_a_language" msgid="2126220398077503271">"Ավելացնել լեզու"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"Լեզու"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"Նախընտրած լեզուն"</string>
-    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Հավելվածների լեզուները"</string>
+    <!-- no translation found for app_locales_picker_menu_title (7617427959223831373) -->
+    <skip />
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Լեզու ընտրեք յուրաքանչյուր հավելվածի համար"</string>
-    <string name="app_locale_picker_title" msgid="8423365003726200684">"Հավելվածի լեզուն"</string>
+    <!-- no translation found for app_locale_picker_title (2431448962911301366) -->
+    <skip />
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Առաջարկվող լեզուներ"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Բոլոր լեզուները"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Համակարգի լեզու"</string>
@@ -230,6 +236,12 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Լեզվի ընտրությունն այս հավելվածի համար հասանելի չէ Կարգավորումներում։"</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"Լեզուն կարող է հավելվածում հասանելի լեզուների ցանկում չլինել։ Որոշ հավելվածներ կարող են չաջակցել այս կարգավորումը։"</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"Այստեղ ցուցադրված են միայն այն հավելվածները, որոնցում աջակցվում է լեզվի ընտրությունը։"</string>
+    <!-- no translation found for desc_introduction_of_language_picker (1038423471887102449) -->
+    <skip />
+    <!-- no translation found for desc_notice_of_language_picker (3449290526457925447) -->
+    <skip />
+    <!-- no translation found for desc_locale_helper_footer_general (6967183342596405116) -->
+    <skip />
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="one">Հեռացնե՞լ ընտրված լեզուն</item>
       <item quantity="other">Հեռացնե՞լ ընտրված լեզուները</item>
@@ -237,7 +249,8 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"Տեքստը կցուցադրվի մեկ այլ լեզվով:"</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"Հնարավոր չէ հեռացնել բոլոր լեզուները"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"Թողեք առնվազն մեկ նախընտրած լեզու"</string>
-    <string name="locale_not_translated" msgid="5079729745235316146">"Հնարավոր է՝ որոշ հավելվածներում այն հասանելի չլինի"</string>
+    <!-- no translation found for locale_not_translated (3071618135527110152) -->
+    <skip />
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"Տեղափոխել վերև"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"Տեղափոխել ներքև"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"Տանել ցանկի սկիզբ"</string>
@@ -536,9 +549,9 @@
     <string name="security_settings_udfps_enroll_repeat_a11y_message" msgid="2785464357615568197">"Այդպես տվիչն ավելի մեծ մակերեսով կնկարի ձեր մատնահետքը"</string>
     <string name="security_settings_udfps_enroll_progress_a11y_message" msgid="6183535114682369699">"Մատնահետքը գրանցվել է <xliff:g id="PERCENTAGE">%d</xliff:g> տոկոսով"</string>
     <string name="security_settings_fingerprint_enroll_finish_title" msgid="3606325177406951457">"Մատնահետքն ավելացվեց"</string>
-    <string name="security_settings_fingerprint_enroll_finish_v2_message" product="tablet" msgid="5918110416185820480">"Որքան հաճախ օգտագործեք մատնահետքով ապակողպումը՝ պլանշետն ապակողպելու կամ ձեր ինքնությունը հավելվածներում հաստատելու համար, այնքան ավելի լավ այն կաշխատի։"</string>
-    <string name="security_settings_fingerprint_enroll_finish_v2_message" product="device" msgid="2989276789236025675">"Որքան հաճախ օգտագործեք մատնահետքով ապակողպումը՝ սարքն ապակողպելու կամ ձեր ինքնությունը հավելվածներում հաստատելու համար, այնքան ավելի լավ այն կաշխատի։"</string>
-    <string name="security_settings_fingerprint_enroll_finish_v2_message" product="default" msgid="6506437402392739879">"Որքան հաճախ օգտագործեք մատնահետքով ապակողպումը՝ հեռախոսն ապակողպելու կամ ձեր ինքնությունը հավելվածներում հաստատելու համար, այնքան ավելի լավ այն կաշխատի։"</string>
+    <string name="security_settings_fingerprint_enroll_finish_v2_message" product="tablet" msgid="4372740782513990687">"Այժմ կարող եք օգտագործել ձեր մատնահետքը՝ պլանշետն ապակողպելու կամ ձեր ինքնությունը հաստատելու համար (օր․՝ հավելվածներում մուտք գործելիս)։"</string>
+    <string name="security_settings_fingerprint_enroll_finish_v2_message" product="device" msgid="6208711210125838327">"Այժմ կարող եք օգտագործել ձեր մատնահետքը՝ սարքն ապակողպելու կամ ձեր ինքնությունը հաստատելու համար (օր․՝ հավելվածներում մուտք գործելիս)։"</string>
+    <string name="security_settings_fingerprint_enroll_finish_v2_message" product="default" msgid="4755651286485895622">"Այժմ կարող եք օգտագործել ձեր մատնահետքը՝ հեռախոսն ապակողպելու կամ ձեր ինքնությունը հաստատելու համար (օր․՝ հավելվածներում մուտք գործելիս)։"</string>
     <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"Ավելի ուշ"</string>
     <string name="security_settings_udfps_tip_fingerprint_help" msgid="7580784640741217494">"Բարձրացրեք, ապա կրկին հպեք"</string>
     <string name="security_settings_udfps_side_fingerprint_help" msgid="2567232481013195191">"Մատի մի կողմը դրեք տվիչի վրա և պահեք, ապա նույնն արեք մյուս կողմով"</string>
@@ -2764,10 +2777,8 @@
     <string name="battery_tip_early_heads_up_done_summary" msgid="7858923105760361208">"Որոշ գործառույթներ կարող են պատշաճ չաշխատել"</string>
     <string name="battery_tip_high_usage_title" msgid="9110720762506146697">"Մարտկոցի լիցքի բարձր ծախսում"</string>
     <string name="battery_tip_high_usage_summary" msgid="3938999581403084551">"Տեսեք, թե որ հավելվածներն են ամենաշատը օգտագործում մարտկոցի լիցքը"</string>
-    <!-- no translation found for battery_tip_limited_temporarily_title (5962767837251276527) -->
-    <skip />
-    <!-- no translation found for battery_tip_limited_temporarily_summary (4236185146380247801) -->
-    <skip />
+    <string name="battery_tip_limited_temporarily_title" msgid="5962767837251276527">"Լիցքավորումը դադարեցված է"</string>
+    <string name="battery_tip_limited_temporarily_summary" msgid="4236185146380247801">"Մարտկոցի պաշտպանություն՝ դրա ծառայության ժամկետը երկարացնելու համար\nՀպեք՝ ավելին իմանալու համար"</string>
     <!-- no translation found for battery_tip_limited_temporarily_extra_summary (8876637325622106400) -->
     <skip />
     <string name="battery_tip_limited_temporarily_dialog_resume_charge" msgid="2302295458913832342">"Վերսկսել լիցքավորումը"</string>
@@ -2805,8 +2816,7 @@
     <string name="battery_tip_unrestrict_app_dialog_message" msgid="215449637818582819">"Այս հավելվածը կկարողանա օգտագործել մարտկոցը ֆոնային ռեժիմում, ինչի պատճառով դրա լիցքը կարող է ավելի շուտ սպառվել:"</string>
     <string name="battery_tip_unrestrict_app_dialog_ok" msgid="7940183167721998470">"Ջնջել"</string>
     <string name="battery_tip_unrestrict_app_dialog_cancel" msgid="4968135709160207507">"Չեղարկել"</string>
-    <!-- no translation found for battery_tip_charge_to_full_button (6701709034348116261) -->
-    <skip />
+    <string name="battery_tip_charge_to_full_button" msgid="6701709034348116261">"Լիցքավորել ամբողջությամբ"</string>
     <string name="battery_tip_dialog_summary_message" product="default" msgid="6097167058237891756">"Ձեր հավելվածները մարտկոցի լիցքն օգտագործում են սովորական ծավալով։ Եթե դրանք չափից շատ սպառեն մարտկոցի լիցքը, հեռախոսը ձեզ կառաջարկի համապատասխան գործողություններ ձեռնարկել։\n\nԴուք ցանկացած ժամանակ կարող եք միացնել մարտկոցի տնտեսման ռեժիմը։"</string>
     <string name="battery_tip_dialog_summary_message" product="tablet" msgid="573297655597451123">"Ձեր հավելվածները մարտկոցի լիցքն օգտագործում են սովորական ծավալով։ Եթե դրանք չափից շատ սպառեն մարտկոցի լիցքը, պլանշետը ձեզ կառաջարկի համապատասխան գործողություններ ձեռնարկել։\n\nԴուք ցանկացած ժամանակ կարող եք միացնել մարտկոցի տնտեսման ռեժիմը։"</string>
     <string name="battery_tip_dialog_summary_message" product="device" msgid="8222461068860745749">"Ձեր հավելվածները մարտկոցի լիցքն օգտագործում են սովորական ծավալով։ Եթե դրանք չափից շատ սպառեն մարտկոցի լիցքը, սարքը ձեզ կառաջարկի համապատասխան գործողություններ ձեռնարկել։\n\nԴուք ցանկացած ժամանակ կարող եք միացնել մարտկոցի տնտեսման ռեժիմը։"</string>
@@ -2996,13 +3006,19 @@
     <string name="battery_usage_background_less_than_one_minute" msgid="3957971442554437909">"Ֆոնային՝ մեկ րոպեից պակաս"</string>
     <string name="battery_usage_for_total_time" msgid="8402254046930910905">"Ընդամենը՝ <xliff:g id="TIME">%s</xliff:g>"</string>
     <string name="battery_usage_for_background_time" msgid="9109637210617095188">"Ֆոնային՝ <xliff:g id="TIME">%s</xliff:g>"</string>
-    <string name="battery_usage_screen_footer" msgid="7899907241146636817">"Մարտկոցի օգտագործման տվյալները մոտավոր են և չեն ցուցադրվում հեռախոսի լիցքավորման ժամանակ"</string>
-    <string name="battery_usage_screen_footer_empty" msgid="115806339713068930">"Մարտկոցի օգտագործման տվյալները հասանելի կլինեն, երբ մի քանի ժամ օգտագործեք ձեր հեռախոսը"</string>
+    <string name="battery_usage_screen_footer" product="default" msgid="7899907241146636817">"Մարտկոցի օգտագործման տվյալները մոտավոր են և չեն ցուցադրվում հեռախոսի լիցքավորման ժամանակ"</string>
+    <!-- no translation found for battery_usage_screen_footer (3729564192877964259) -->
+    <skip />
+    <!-- no translation found for battery_usage_screen_footer (6610974734578869768) -->
+    <skip />
+    <string name="battery_usage_screen_footer_empty" product="default" msgid="115806339713068930">"Մարտկոցի օգտագործման տվյալները հասանելի կլինեն, երբ մի քանի ժամ օգտագործեք ձեր հեռախոսը"</string>
+    <!-- no translation found for battery_usage_screen_footer_empty (846951714694270507) -->
+    <skip />
+    <!-- no translation found for battery_usage_screen_footer_empty (6290839602700243003) -->
+    <skip />
     <string name="battery_usage_chart" msgid="4114747521432440017">"Մարտկոցի օգտագործման գծապատկեր"</string>
-    <!-- no translation found for daily_battery_usage_chart (4176059567682992686) -->
-    <skip />
-    <!-- no translation found for hourly_battery_usage_chart (3098314511076561272) -->
-    <skip />
+    <string name="daily_battery_usage_chart" msgid="4176059567682992686">"Մարտկոցի օրական օգտագործման գծապատկեր"</string>
+    <string name="hourly_battery_usage_chart" msgid="3098314511076561272">"Մարտկոցի ամենժամյա օգտագործման գծապատկեր"</string>
     <string name="process_stats_summary_title" msgid="502683176231281732">"Գործընթացի վիճակագրություն"</string>
     <string name="process_stats_summary" msgid="522842188571764699">"Ընթացիկ գործընթացների տեխնիկական վիճակագրություն"</string>
     <string name="app_memory_use" msgid="7559666138324410666">"Օգտագործվող հիշողություն"</string>
@@ -5620,10 +5636,8 @@
     <string name="media_controls_title" msgid="403271085636252597">"Մեդիա"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"Ամրացնել մեդիա նվագարկիչը"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"Մեդիա նվագարկիչը բաց է մնում Արագ կարգավորումներում, որպեսզի դուք կարողանաք անմիջապես վերսկսել նվագարկումը։"</string>
-    <!-- no translation found for media_controls_lockscreen_title (2188311721857512510) -->
-    <skip />
-    <!-- no translation found for media_controls_lockscreen_description (3320333660404439510) -->
-    <skip />
+    <string name="media_controls_lockscreen_title" msgid="2188311721857512510">"Ցույց տալ մեդիա բովանդակությունը կողպէկրանին"</string>
+    <string name="media_controls_lockscreen_description" msgid="3320333660404439510">"Մեդիա նվագարկիչը բաց է մնում կողպէկրանին, որպեսզի կարողանաք անմիջապես վերսկսել նվագարկումը։"</string>
     <string name="media_controls_recommendations_title" msgid="184225835236807677">"Ցույց տալ մեդիա բովանդակության առաջարկներ"</string>
     <string name="media_controls_recommendations_description" msgid="7596498733126824030">"Ձեր գործողությունների հիման վրա"</string>
     <string name="media_controls_hide_player" msgid="2751439192580884015">"Թաքցնել նվագարկիչը"</string>
