--- a/res/values-ur/strings.xml
+++ b/res/values-ur/strings.xml
@@ -216,13 +216,15 @@
     <string name="skip_label" msgid="6380034601349015895">"نظر انداز کریں"</string>
     <string name="next_label" msgid="1248293387735652187">"اگلا"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"زبانیں"</string>
+    <string name="language_picker_category_title" msgid="1792199453060454565">"ترجیحی زبان کی ترتیب"</string>
+    <string name="desc_current_default_language" msgid="1901157141663662859">"سسٹم کی زبان"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"ہٹائیں"</string>
     <string name="add_a_language" msgid="2126220398077503271">"ایک زبان شامل کریں"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"زبان"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"ترجیحی زبان"</string>
-    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"ایپ کی زبانیں"</string>
+    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"ایپ کی زبانیں"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"ہر ایپ کے لیے زبان سیٹ کریں"</string>
-    <string name="app_locale_picker_title" msgid="8423365003726200684">"ایپ کی زبان"</string>
+    <string name="app_locale_picker_title" msgid="2431448962911301366">"ایپ کی زبان"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"تجویز کردہ زبانیں"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"سبھی زبانیں"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"سسٹم کی زبان"</string>
@@ -230,6 +232,9 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"اس ایپ کے لیے زبان کا انتخاب ترتیبات سے دستیاب نہیں ہے۔"</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"زبان ایپ میں دستیاب زبانوں سے مختلف ہو سکتی ہے۔ ہو سکتا ہے کچھ ایپس اس ترتیب کو سپورٹ نہ کریں۔"</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"یہاں صرف ان ایپس کی فہرست دکھائی جاتی ہے جو زبان کے انتخاب کو سپورٹ کرتی ہیں۔"</string>
+    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"آپ کا سسٹم، ایپس اور ویب سائٹس آپ کی ترجیحی زبانوں میں سے پہلی تعاون یافتہ زبان استعمال کرتی ہیں۔"</string>
+    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"ہر ایپ کے لیے زبان منتخب کرنے کے لیے، ایپ کی زبان کی ترتیبات پر جائیں۔"</string>
+    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"زبانوں کے بارے میں مزید جانیں"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="other">منتخب کردہ زبانیں ہٹائیں؟</item>
       <item quantity="one">منتخب کردہ زبان ہٹائیں؟</item>
@@ -237,7 +242,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"متن ایک دوسری زبان میں ڈسپلے کیا جائے گا۔"</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"ساری زبانیں نہیں ہٹا سکتا"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"کم از کم ایک ترجیحی زبان رکھیں"</string>
-    <string name="locale_not_translated" msgid="5079729745235316146">"ہو سکتا ہے کچھ ایپس میں دستیاب نہ ہو"</string>
+    <string name="locale_not_translated" msgid="3071618135527110152">"سسٹم کی زبان کے طور پر دستیاب نہیں ہے"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"اوپر منتقل کریں"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"نیچے منتقل کریں"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"اوپر منتقل کریں"</string>
@@ -536,9 +541,9 @@
     <string name="security_settings_udfps_enroll_repeat_a11y_message" msgid="2785464357615568197">"اس سے آپ کے فنگر پرنٹ کے مزید حصوں کو کیپچر کرنے میں مدد ملے گی"</string>
     <string name="security_settings_udfps_enroll_progress_a11y_message" msgid="6183535114682369699">"فنگر پرنٹ اندراج کرنے کی کارروائی <xliff:g id="PERCENTAGE">%d</xliff:g> فیصد مکمل ہو چکی ہے"</string>
     <string name="security_settings_fingerprint_enroll_finish_title" msgid="3606325177406951457">"فنگر پرنٹ شامل ہو گیا"</string>
-    <string name="security_settings_fingerprint_enroll_finish_v2_message" product="tablet" msgid="5918110416185820480">"اپنے ٹیبلیٹ کو غیر مقفل کرنے یا ایپس میں آپ ہی ہیں یہ توثیق کرنے کے لیے آپ فنگر پرنٹ اَن لاک کو جتنا زیادہ استعمال کرتے ہیں اتنا ہی اس میں بہتری پیدا ہوتی ہے"</string>
-    <string name="security_settings_fingerprint_enroll_finish_v2_message" product="device" msgid="2989276789236025675">"اپنے آلے کو غیر مقفل کرنے یا ایپس میں آپ ہی ہیں یہ توثیق کرنے کے لیے آپ فنگر پرنٹ اَن لاک کو جتنا زیادہ استعمال کرتے ہیں اتنا ہی اس میں بہتری پیدا ہوتی ہے"</string>
-    <string name="security_settings_fingerprint_enroll_finish_v2_message" product="default" msgid="6506437402392739879">"اپنے فون کو غیر مقفل کرنے یا ایپس میں آپ ہی ہیں یہ توثیق کرنے کے لیے آپ فنگر پرنٹ اَن لاک کو جتنا زیادہ استعمال کرتے ہیں اتنا ہی اس میں بہتری پیدا ہوتی ہے"</string>
+    <string name="security_settings_fingerprint_enroll_finish_v2_message" product="tablet" msgid="4372740782513990687">"اب آپ اپنا ٹیبلیٹ غیر مقفل کرنے یا یہ توثیق کرنے کیلئے کہ یہ آپ ہی ہیں، اپنا فنگر پرنٹ استعمال کر سکتے ہیں، جیسے ایپس میں سائن ان کرتے وقت"</string>
+    <string name="security_settings_fingerprint_enroll_finish_v2_message" product="device" msgid="6208711210125838327">"اب آپ اپنا آلہ غیر مقفل کرنے یا یہ توثیق کرنے کیلئے کہ یہ آپ ہی ہیں، اپنا فنگر پرنٹ استعمال کر سکتے ہیں، جیسے ایپس میں سائن ان کرتے وقت"</string>
+    <string name="security_settings_fingerprint_enroll_finish_v2_message" product="default" msgid="4755651286485895622">"اب آپ اپنا فون غیر مقفل کرنے یا یہ توثیق کرنے کیلئے کہ یہ آپ ہی ہیں، اپنا فنگر پرنٹ استعمال کر سکتے ہیں، جیسے ایپس میں سائن ان کرتے وقت"</string>
     <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"اسے بعد میں کریں"</string>
     <string name="security_settings_udfps_tip_fingerprint_help" msgid="7580784640741217494">"اٹھائیں، پھر دوبارہ ٹچ کریں"</string>
     <string name="security_settings_udfps_side_fingerprint_help" msgid="2567232481013195191">"اپنے فنگر پرنٹ کے حصے کو سینسر پر رکھیں اور دبائے رکھیں پھر، دوسرے حصے پر سوئچ کریں"</string>
@@ -2993,8 +2998,16 @@
     <string name="battery_usage_background_less_than_one_minute" msgid="3957971442554437909">"پس منظر: ایک منٹ سے کم"</string>
     <string name="battery_usage_for_total_time" msgid="8402254046930910905">"کُل: <xliff:g id="TIME">%s</xliff:g>"</string>
     <string name="battery_usage_for_background_time" msgid="9109637210617095188">"پس منظر: <xliff:g id="TIME">%s</xliff:g>"</string>
-    <string name="battery_usage_screen_footer" msgid="7899907241146636817">"بیٹری کے استعمال کا ڈیٹا تخمینی ہے اور فون چارج ہوتے وقت بیٹری کے استعمال کی پیمائش نہیں کرتا ہے"</string>
-    <string name="battery_usage_screen_footer_empty" msgid="115806339713068930">"آپ کے اپنے فون کو کچھ گھنٹوں تک استعمال کرنے کے بعد بیٹری کے استعمال کا ڈیٹا دستیاب ہوگا"</string>
+    <string name="battery_usage_screen_footer" product="default" msgid="7899907241146636817">"بیٹری کے استعمال کا ڈیٹا تخمینی ہے اور فون چارج ہوتے وقت بیٹری کے استعمال کی پیمائش نہیں کرتا ہے"</string>
+    <!-- no translation found for battery_usage_screen_footer (3729564192877964259) -->
+    <skip />
+    <!-- no translation found for battery_usage_screen_footer (6610974734578869768) -->
+    <skip />
+    <string name="battery_usage_screen_footer_empty" product="default" msgid="115806339713068930">"آپ کے اپنے فون کو کچھ گھنٹوں تک استعمال کرنے کے بعد بیٹری کے استعمال کا ڈیٹا دستیاب ہوگا"</string>
+    <!-- no translation found for battery_usage_screen_footer_empty (846951714694270507) -->
+    <skip />
+    <!-- no translation found for battery_usage_screen_footer_empty (6290839602700243003) -->
+    <skip />
     <string name="battery_usage_chart" msgid="4114747521432440017">"بیٹری کے استعمال کا چارٹ"</string>
     <string name="daily_battery_usage_chart" msgid="4176059567682992686">"یومیہ بیٹری کے استعمال کا چارٹ"</string>
     <string name="hourly_battery_usage_chart" msgid="3098314511076561272">"فی گھنٹہ بیٹری کے استعمال کا چارٹ"</string>
@@ -5615,10 +5628,8 @@
     <string name="media_controls_title" msgid="403271085636252597">"میڈیا"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"میڈیا پلیئر کو پن کریں"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"پلے بیک کو فوری طور پر دوبارہ شروع کرنے کے لیے میڈیا پلیئر فوری ترتیبات میں کھلا رہتا ہے"</string>
-    <!-- no translation found for media_controls_lockscreen_title (2188311721857512510) -->
-    <skip />
-    <!-- no translation found for media_controls_lockscreen_description (3320333660404439510) -->
-    <skip />
+    <string name="media_controls_lockscreen_title" msgid="2188311721857512510">"مقفل اسکرین پر میڈیا دکھائیں"</string>
+    <string name="media_controls_lockscreen_description" msgid="3320333660404439510">"پلے بیک کو فوری طور پر دوبارہ شروع کرنے کے لیے میڈیا پلیئر مقفل اسکرین پر کھلا رہتا ہے"</string>
     <string name="media_controls_recommendations_title" msgid="184225835236807677">"میڈیا کی تجاویز دکھائیں"</string>
     <string name="media_controls_recommendations_description" msgid="7596498733126824030">"آپ کی سرگرمی کی بنیاد پر"</string>
     <string name="media_controls_hide_player" msgid="2751439192580884015">"کھلاڑی کو چھپائیں"</string>
